<resources>
    <string name="app_name">Từ điển</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Từ điển Anh - Việt</string>
    <string name="nav_header_subtitle">English - Vietnamese Dictionary</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookmark">Bookmark</string>
    <string name="options">Options</string>
    <string name="translate">Translate</string>
    <string name="history">History</string>
    <string name="grammar">Grammar</string>
    <string name="text_translation">Text translation</string>
    <string name="setting">Setting</string>
    <string name="contact_dev">Contact developer</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="clear">CLEAR</string>
<!--    <string name="vietnhat">Từ điển Việt Nhật</string>-->
    <string name="vietnamese_japanese">Translate to Japanese</string>
    <string name="vietnamese_english">Translate to English</string>
</resources>
